--- a/employee/package.json
+++ b/employee/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "mongoose": "^5.0.16",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-infinite-scroll-component": "^4.0.2",
+    "react-infinite-scroller": "^1.1.4",
+    "react-scripts": "1.1.4",
+    "react-spinners": "^0.3.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
